--- a/big job/AutoDrivenews.html
+++ b/big job/AutoDrivenews.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8">
-<title>学科领域</title>
+<title>产业成果</title>
 <style>
 .body {
 	margin: 0 auto;
@@ -29,6 +29,7 @@
 <!--
 function MM_preloadImages() { //v3.0	
   document.getElementById("cvcontent").hidden = "hidden";	
+  document.getElementById("Imagecontent").hidden = true;
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
@@ -77,22 +78,6 @@ function MM_nbGroup(event, grpName) { //v6.0
 }
 //-->
 </script>
-<script type="text/JavaScript">
-function loadADContent(num) {
-	if (num == 0) {
-		document.getElementById("adcontent").hidden = true;
-	} else {
-		document.getElementById("adcontent").hidden = false;
-	}	
-}
-function changeADImage(num) {
-	if (num == 0) {
-		document.getElementById("ADImageSrc").src = "img/AutoDrive-2.png";
-	} else {
-		document.getElementById("ADImageSrc").src = "img/AutoDrive-1.jpeg";
-	}
-}
-</script>
 </head>
 
 <body class="body" onLoad="MM_preloadImages('category/shouye_down.jpg','category/shouye_over.jpg','category/xuekelingyu_down.jpg','category/xuekelingyu_over.jpg','category/chanyechengguo_down.jpg','category/chanyechengguo_over.jpg','category/yingshizuopin_down.jpg','category/yingshizuopin_over.jpg','category/guanyuwomen_down.jpg','category/guanyuwomen_over.jpg')">
@@ -104,27 +89,24 @@ function changeADImage(num) {
 <div id="category">
 <table border="0" cellpadding="0" cellspacing="0" align="center" class="contents">
   <tr class="contents">
-    <td class="contents" width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
+    <td  class="contents" width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
     <td class="contents" width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
-    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="product.html" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br />
-<div id="ad" onmouseover="loadADContent(1)" onMouseOut="loadADContent(0)">
-<table  class="contents">
-<tr class="contents">
-<td width="500px" height="350px"  class="contents" valign="middle" onMouseOver="changeADImage(0)" onMouseOut="changeADImage(1)">
-<a href="AutoDrivenews.html"><img src="img/AutoDrive-1.jpeg" width="495px" height="300px" id="ADImageSrc"/></a>
-</td>
-<td width="500px" height="350px" align="left" style="text-align:left;"  class="contents">
-<div id="adcontent">
-<p>
-<a href="https://en.wikipedia.org/wiki/Autonomous_car" target="_blank"><b><font color="#FF0B0F">自动驾驶汽车</font></b></a>，又称为无人驾驶汽车、电脑驾驶汽车或轮式移动机器人，是无人地面载具的一种，具有传统汽车的运输能力。作为自动化载具，自动驾驶汽车不需要人为操作即能感测其环境及导航。完全的自动驾驶汽车仍未全面商用化，大多数均为原型机及展示系统，部分可靠技术才下放至量产车型，但有关于自驾车逐渐成为现实，已经引起了很多有关于道德的讨论。
-</p></div>
-</td>
-</tr></table>
-</div><br />
+<nav aria-label="产业成果">
+  <ul class="pager">
+    <li class="previous"><a href="product.html"><span aria-hidden="true">&larr;</span> 产业成果</a></li>
+  </ul>
+</nav>
+<br />
+<div align="left">
+<div  id='write'  class = 'is-node show-fences-line-number'><h3 align="center"><a name='header-n0' class='md-header-anchor '></a>Waymo自动驾驶汽车路测里程已达到600万英里</h3><p align="center">来源：TechWeb&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;   <font color="#B0B0B0"> 时间：2018-05-09 15:01</font></p>
+<p>5月9日消息，据国外媒体报道，谷歌2018年度I/O开发者大会已在当地时间周二正式拉开序幕，其母公司Alphabet旗下的Waymo自动驾驶汽车目前的状况也在周二进行了介绍。Waymo是Alphabet旗下负责研究自动驾驶技术的部门，在2016年12月之前是谷歌的一个部门，后成为谷歌母公司Alphabet旗下的一个部门。</p><p><img src='img/adnews-1.jpg' alt='978a9a5f3f35d1c.jpg' /></p><p align="center"><font font-size="-2" color="#A3A3A3">Waymo自动驾驶汽车路测里程已达到600万英里</font></p><p>在周二的谷歌开发者大会上，谷歌出人意料的邀请Waymo首席执行官约翰·科拉菲克(John Krafcik)登台，其在大会上透露，Waymo的自动驾驶汽车服务将在今年晚些时候在亚利桑那州凤凰城推出。</p><p>除了首席执行官约翰·科拉菲克，Waymo首席技术官德米特里·多尔戈夫(Dmitri Dolgov)当天也有登台，其透露到目前为止，Waymo自动驾驶汽车目前在公共道路上进行的路测已达到了600万英里(约965万公里)。</p><p>德米特里·多尔戈夫还透露，其自动驾驶汽车测试车队一天的行驶距离，比美国司机平均一年的行驶里程还要多。</p><p>在公共道路上进行路测的同时，Waymo也在对其的机器学习模型进行模拟测试，其进行的模拟测试，相当于操控25000辆汽车进行24小时的不间断测试，以此改善神经网络的性能。</p></div>
+</div>
 </body>
 </html>
+
