fix a small bug

--- a/big job/product.html
+++ b/big job/product.html
@@ -179,7 +179,7 @@ function changeMTImage(num) {
 <td width="500px" height="350px" align="left" style="text-align:left;"  class="contents">
 <div id="translatecontent">
 <p>
-<a href="https://en.wikipedia.org/wiki/Machine_translation" target="_blank"><b><font color="#FF0B0F">机器翻译</font></b></a>（Machine Translation，经常简写为MT，俗称机翻）属于计算语言学的范畴，其研究借由计算机vpn女程序将文字或演说从一种自然语言翻译成另一种自然语言。简单来说，机器翻译是通过将一个自然语言的字辞取代成另一个语兔兔哦wet咯的字辞。借由使用语料库的技术，可达成更加复杂的自动翻译，包含可更佳的处理不同的文法结构、辞汇辨识、惯用语的对应等。
+<a href="https://en.wikipedia.org/wiki/Machine_translation" target="_blank"><b><font color="#FF0B0F">机器翻译</font></b></a>（Machine Translation，经常简写为MT，俗称机翻）属于计算语言学的范畴，其研究借由计算机程序将文字或演说从一种自然语言翻译成另一种自然语言。简单来说，机器翻译是通过将一个自然语言的字辞取代成另一个语兔兔哦wet咯的字辞。借由使用语料库的技术，可达成更加复杂的自动翻译，包含可更佳的处理不同的文法结构、辞汇辨识、惯用语的对应等。
 </p></div>
 </td>
 </tr></table>
