--- a/big job/video.html
+++ b/big job/video.html
@@ -136,53 +136,12 @@ function changeMTImage(num) {
   <tr class="contents">
     <td class="contents" width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
     <td class="contents" width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
-    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
-    <td class="contents" width="150" align="center"><a href="video.html" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="product.html" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br />
-<div id="ad" onmouseover="loadADContent(1)" onMouseOut="loadADContent(0)">
-<table  class="contents">
-<tr class="contents">
-<td width="500px" height="350px"  class="contents" valign="middle" onMouseOver="changeADImage(0)" onMouseOut="changeADImage(1)">
-<a href="AutoDrivenews.html"><img src="img/AutoDrive-1.jpeg" width="495px" height="300px" id="ADImageSrc"/></a>
-</td>
-<td width="500px" height="350px" align="left" style="text-align:left;"  class="contents">
-<div id="adcontent">
-<p>
-<a href="https://en.wikipedia.org/wiki/Autonomous_car" target="_blank"><b><font color="#FF0B0F">自动驾驶汽车</font></b></a>，又称为无人驾驶汽车、电脑驾驶汽车或轮式移动机器人，是无人地面载具的一种，具有传统汽车的运输能力。作为自动化载具，自动驾驶汽车不需要人为操作即能感测其环境及导航。完全的自动驾驶汽车仍未全面商用化，大多数均为原型机及展示系统，部分可靠技术才下放至量产车型，但有关于自驾车逐渐成为现实，已经引起了很多有关于道德的讨论。
-</p></div>
-</td>
-</tr></table>
-</div><br />
-<div id="face" onmouseover="loadFACEContent(1)" onMouseOut="loadFACEContent(0)">
-<table  class="contents">
-<tr class="contents">
-<td width="500px" height="350px" align="left" style="text-align:left;"  class="contents">
-<div id="facecontent">
-<p>
-<a href="https://baike.baidu.com/item/%E4%BA%BA%E8%84%B8%E8%AF%86%E5%88%AB" target="_blank"><b><font color="#FF0B0F">人脸识别</font></b></a>，是基于人的脸部特征信息进行身份识别的一种生物识别技术。用摄像机或摄像头采集含有人脸的图像或视频流，并自动在图像中检测和跟踪人脸，进而对检测到的人脸进行脸部的一系列相关技术，通常也叫做人像识别、面部识别。
-</p></div>
-</td>
-<td width="500px" height="350px"  class="contents" valign="middle" onMouseOver="changeFACEImage(0)" onMouseOut="changeFACEImage(1)">
-<a href="facenews.html"><img src="img/face-1.jpg" width="495px" height="300px" id="FACEImageSrc"/></a>
-</td>
-</tr></table>
-</div><br />
-<div id="translate" onmouseover="loadMTContent(1)" onMouseOut="loadMTContent(0)">
-<table  class="contents">
-<tr class="contents">
-<td width="500px" height="350px"  class="contents" valign="middle" onMouseOver="changeMTImage(0)" onMouseOut="changeMTImage(1)">
-<a href="http://kaoyan.eol.cn/nnews/201804/t20180422_1596561.shtml" target="_blank"><img src="img/translate-1.jpeg" width="495px" height="300px" id="MTImageSrc"/></a>
-</td>
-<td width="500px" height="350px" align="left" style="text-align:left;"  class="contents">
-<div id="translatecontent">
-<p>
-<a href="https://en.wikipedia.org/wiki/Machine_translation" target="_blank"><b><font color="#FF0B0F">机器翻译</font></b></a>（Machine Translation，经常简写为MT，俗称机翻）属于计算语言学的范畴，其研究借由计算机程序将文字或演说从一种自然语言翻译成另一种自然语言。简单来说，机器翻译是通过将一个自然语言的字辞取代成另一个语兔兔哦wet咯的字辞。借由使用语料库的技术，可达成更加复杂的自动翻译，包含可更佳的处理不同的文法结构、辞汇辨识、惯用语的对应等。
-</p></div>
-</td>
-</tr></table>
-</div><br />
+
 </body>
 </html>
