--- a/big job/video.html
+++ b/big job/video.html
@@ -142,6 +142,22 @@ function changeMTImage(num) {
   </tr>
 </table>
 </div><br />
-
+<table class="contents">
+<tr class="contents">
+<td class="contents" width="800px" height="200px">
+fjeio
+</td>
+</tr>
+<tr class="contents">
+<td class="contents" width="800px" height="200px">
+fuhige
+</td>
+</tr>
+<tr class="contents">
+<td class="contents" width="800px" height="200px">
+<iframe name="body" src="aimovie.html" width="100%" height="1500px" frameborder="0"></iframe>
+</td>
+</tr>
+</table>
 </body>
 </html>
