--- a/big job/video.html
+++ b/big job/video.html
@@ -144,18 +144,22 @@ function changeMTImage(num) {
 </div><br />
 <table class="contents">
 <tr class="contents">
+<td class="contents" width="800px" height="0px">
+</td>
+</tr>
+<tr class="contents">
 <td class="contents" width="800px" height="200px">
 fjeio
 </td>
 </tr>
 <tr class="contents">
-<td class="contents" width="800px" height="200px">
-fuhige
+<td class="contents" width="800px" height="400px">
+<img height="400px" src="img/robotmovie-1.jpg" />
 </td>
 </tr>
 <tr class="contents">
 <td class="contents" width="800px" height="200px">
-<iframe name="body" src="aimovie.html" width="100%" height="1500px" frameborder="0"></iframe>
+<iframe name="body" src="robotmovie.html" width="100%" height="1500px" frameborder="0"></iframe>
 </td>
 </tr>
 </table>
