--- a/big job/video.html
+++ b/big job/video.html
@@ -154,12 +154,12 @@ fjeio
 </tr>
 <tr class="contents">
 <td class="contents" width="800px" height="400px">
-<img height="400px" src="img/robotmovie-1.jpg" />
+<img height="400px" src="img/robotressmovie-1.jpg" />
 </td>
 </tr>
 <tr class="contents">
 <td class="contents" width="800px" height="200px">
-<iframe name="body" src="robotmovie.html" width="100%" height="1500px" frameborder="0"></iframe>
+<iframe name="body" src="robotressmovie.html" width="100%" height="1500px" frameborder="0"></iframe>
 </td>
 </tr>
 </table>
