--- a/big job/robotressmovie.html
+++ b/big job/robotressmovie.html
@@ -30,7 +30,13 @@
 
 <body class="body">
 <div align="left">
-<div  id='write'  class = 'is-node show-fences-line-number'><h1><a name='header-n0' class='md-header-anchor '></a>机械姬 Ex Machina (2014)</h1><p><a href='https://movie.douban.com/subject/4160540/photos?type=R'><img src='https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2208934451.webp' alt='Ex Machina' /></a></p><p>导演: <a href='https://movie.douban.com/celebrity/1284570/'>亚历克斯·嘉兰</a>
+<div  id='write'  class = 'is-node show-fences-line-number'><h1><a name='header-n0' class='md-header-anchor '></a>机械姬 Ex Machina (2014)</h1><table class="contents">
+<tr class="contents">
+<td class="contents">
+<p><a href='https://movie.douban.com/subject/4160540/photos?type=R'><img src='https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2208934451.webp' alt='Ex Machina' /></a></p>
+</td>
+<td class="contents" align="left">
+<p align="left">导演: <a href='https://movie.douban.com/celebrity/1284570/'>亚历克斯·嘉兰</a>
 编剧: <a href='https://movie.douban.com/celebrity/1284570/'>亚历克斯·嘉兰</a>
 主演: <a href='https://movie.douban.com/celebrity/1012481/'>奥斯卡·伊萨克</a> / <a href='https://movie.douban.com/celebrity/1313116/'>多姆纳尔·格里森</a> / <a href='https://movie.douban.com/celebrity/1233154/'>艾丽西亚·维坎德</a>/ <a href='https://movie.douban.com/celebrity/1045054/'>克里·约翰逊</a> / <a href='https://movie.douban.com/celebrity/1333555/'>黛博拉·罗桑</a> / <a href='javascript:;'>更多...</a>
 类型: 科幻 / 悬疑 / 惊悚
@@ -40,7 +46,10 @@
 上映日期: 2014-12-16(BFI影展) / 2015-01-21(英国)
 片长: 108分钟
 又名: 人造意识(台) / 机器夏娃 / 觉醒前夜
-IMDb链接: <a href='http://www.imdb.com/title/tt0470752'>tt0470752</a></p><p>机械姬的剧情简介· · · · · ·</p><p>　　效力于某知名搜索引擎公司的程序员加利·史密斯（多姆纳尔·格利森 Domhnall Gleeson 饰）幸运地抽中老板纳森（奥斯卡•伊萨克 Oscar Isaac 饰）所开出的大奖，他将受邀前往位于深山的别墅中和老板共度假期。在与世隔绝的别墅中，纳森亲切地接待了这位员工。 事实上他邀请加利到来还有另一个目的，那就是协助他完成其所开发的智能机器人的测试。天才一般的纳森研制了具有独立思考能力的智能机器人伊娃（艾丽西亚·维坎德 Alicia Vikander 饰），为了确认她是否具有独立思考的能力，他希望加利能为伊娃进行著名的“图灵测试”。似乎从第一眼开始，加利便为这台有着宛如人类般姣好容颜的机器人所吸引。 
+IMDb链接: <a href='http://www.imdb.com/title/tt0470752'>tt0470752</a></p>
+</td>
+</tr>
+</table><p><font color="#087A11"><strong>机械姬的剧情简介</strong>· · · · · ·</font></p><p>　　效力于某知名搜索引擎公司的程序员加利·史密斯（多姆纳尔·格利森 Domhnall Gleeson 饰）幸运地抽中老板纳森（奥斯卡•伊萨克 Oscar Isaac 饰）所开出的大奖，他将受邀前往位于深山的别墅中和老板共度假期。在与世隔绝的别墅中，纳森亲切地接待了这位员工。 事实上他邀请加利到来还有另一个目的，那就是协助他完成其所开发的智能机器人的测试。天才一般的纳森研制了具有独立思考能力的智能机器人伊娃（艾丽西亚·维坎德 Alicia Vikander 饰），为了确认她是否具有独立思考的能力，他希望加利能为伊娃进行著名的“图灵测试”。似乎从第一眼开始，加利便为这台有着宛如人类般姣好容颜的机器人所吸引。 
 　　在随后的交流中，他所面对的似乎不是冷冰冰的机器，而更像是一个被无辜囚禁起来的可怜少女……</p></div>
 </div>
 </body>
