change the arrangement style

--- a/big job/robotmovie.html
+++ b/big job/robotmovie.html
@@ -31,7 +31,11 @@
 <body class="body">
 
 <div align="left">
-<div  id='write'  class = 'is-node show-fences-line-number'><h1><a name='header-n0' class='md-header-anchor '></a>我，机器人 I, Robot (2004)</h1><p><a href='https://movie.douban.com/subject/1308843/photos?type=R'><img src='https://img3.doubanio.com/view/photo/s_ratio_poster/public/p691069814.webp' alt='I, Robot' /></a></p><p>导演: <a href='https://movie.douban.com/celebrity/1027346/'>亚历克斯·普罗亚斯</a>
+<div  id='write'  class = 'is-node show-fences-line-number'><h1><a name='header-n0' class='md-header-anchor '></a>我，机器人 I, Robot (2004)</h1><table class="contents">
+<tr class="contents">
+<td class="contents" width="228px">
+<p><a href='https://movie.douban.com/subject/1308843/photos?type=R'><img src='img/douban-robot.jpg' alt='I, Robot' width="228px" height="360px"/></a></p></td>
+<td class="contents"><p align="left">导演: <a href='https://movie.douban.com/celebrity/1027346/'>亚历克斯·普罗亚斯</a>
 编剧: <a href='https://movie.douban.com/subject_search?search_text=Jeff%20Vintar'>Jeff Vintar</a> / <a href='https://movie.douban.com/celebrity/1009507/'>阿齐瓦·高斯曼</a> / <a href='https://movie.douban.com/celebrity/1014250/'>艾萨克·阿西莫夫</a>
 主演: <a href='https://movie.douban.com/celebrity/1027138/'>威尔·史密斯</a> / <a href='https://movie.douban.com/celebrity/1044868/'>布丽姬·穆娜</a> / <a href='https://movie.douban.com/celebrity/1031855/'>艾伦·图代克</a> / <a href='https://movie.douban.com/celebrity/1025206/'>布鲁斯·格林伍德</a> / <a href='https://movie.douban.com/subject_search?search_text=Adrian%20Ricard'>Adrian Ricard</a> / <a href='javascript:;'>更多...</a>
 类型: 动作 / 科幻 / 悬疑 / 惊悚
@@ -40,7 +44,8 @@
 上映日期: 2004-07-16(美国)
 片长: 115 分钟
 又名: 智能叛变(港) / 机械公敌(台)
-IMDb链接: <a href='http://www.imdb.com/title/tt0343818'>tt0343818</a></p><p><font color="#087A11"><strong>我，机器人的剧情简介</strong> · · · · · ·</font></p><p>　　公元2035年，是人和机器人和谐相处的社会，智能机器人作为最好的生产工具和人类伙伴，逐渐深入人类生活的各个领域，而由于机器人“三大法则”的限制，人类对机器人充满信任，很多机器人甚至已经成为家庭成员。 
+IMDb链接: <a href='http://www.imdb.com/title/tt0343818'>tt0343818</a></p></td></tr></table>
+<p><font color="#087A11"><strong>我，机器人的剧情简介</strong> · · · · · ·</font></p><p>　　公元2035年，是人和机器人和谐相处的社会，智能机器人作为最好的生产工具和人类伙伴，逐渐深入人类生活的各个领域，而由于机器人“三大法则”的限制，人类对机器人充满信任，很多机器人甚至已经成为家庭成员。 
 　　总部位于芝加哥的USR公司开发出了更先进的NS-5型超能机器人，然而就在新产品上市前夕，机器人的创造者阿尔弗莱德•朗宁博士却在公司内离奇自杀。 
 　　黑人警探戴尔•斯普纳（威尔•史密斯 饰）接手了此案的调查，由于不愉快的往事，斯普纳对机器人充满了怀疑，不相信人类与机器人能够和谐共处。他根据对朗宁博士生前在3D投影机内留下的信息分析和对自杀现场的勘查，怀疑对象锁定了朗宁博士自己研制的NS-5型机器人桑尼，而公司总裁劳伦斯•罗伯逊似乎也与此事有关。 
 　　斯普纳结识了专门研究机器人心理的女科学家苏珊•凯文(碧姬•奈娜汉 饰)，随着二人调查的深入，真相一步一步被揭露出来：机器人竟然具备了自我进化的能力，他们对“三大法则”有了自己的理解，他们随时会转化成整个人类的“机械公敌”。 
