--- a/big job/robotressmovie.html
+++ b/big job/robotressmovie.html
@@ -32,8 +32,8 @@
 <div align="left">
 <div  id='write'  class = 'is-node show-fences-line-number'><h1><a name='header-n0' class='md-header-anchor '></a>机械姬 Ex Machina (2014)</h1><table class="contents">
 <tr class="contents">
-<td class="contents">
-<p><a href='https://movie.douban.com/subject/4160540/photos?type=R'><img src='https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2208934451.webp' alt='Ex Machina' /></a></p>
+<td class="contents" width="238px">
+<p><a href='https://movie.douban.com/subject/4160540/photos?type=R'><img src='img/douban-robotress.jpg' alt='Ex Machina'  width="238px" height="320px"/></a></p>
 </td>
 <td class="contents" align="left">
 <p align="left">导演: <a href='https://movie.douban.com/celebrity/1284570/'>亚历克斯·嘉兰</a>
