add for backgroud music

--- a/big job/aboutus.html
+++ b/big job/aboutus.html
@@ -114,6 +114,10 @@ window.location = "http://www.macromedia.com/shockwave/download/download.cgi?P1_
 </head>
 
 <body class="body" onLoad="MM_preloadImages('category/shouye_down.jpg','category/shouye_over.jpg','category/xuekelingyu_down.jpg','category/xuekelingyu_over.jpg','category/chanyechengguo_down.jpg','category/chanyechengguo_over.jpg','category/yingshizuopin_down.jpg','category/yingshizuopin_over.jpg','category/guanyuwomen_down.jpg','category/guanyuwomen_over.jpg')">
+<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+            src="sound/bg-1.mp3" hidden="true">
+      你的浏览器不支持audio标签
+</audio>
 <div id="logo" align="center">
 <img src="img/mygif2.gif" width="350px" height="150px" />
 <img src="img/ai-v1.png" width="300px" height="150px" />
